--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "build": "electron-builder build --win --publish never",
-    "deploy": "electron-builder build --win --publish always"
+    "build": "electron-builder build --linux --armv7l --publish never",
+    "deploy": "electron-builder build --linux --armv7l --publish always"
   },
   "repository": {
     "type": "git",
